// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Leaflet maps renders a map with HERE maps as provider 1`] = `
<div
  className="widget-maps"
  style={
    Object {
      "height": "75px",
      "width": "50%",
    }
  }
>
  <div
    className="widget-leaflet-maps-wrapper"
  >
    <Map
      attributionControl={false}
      center={
        Object {
          "lat": 51.906688,
          "lng": 4.48837,
        }
      }
      className="widget-leaflet-maps"
      dragging={true}
      maxZoom={18}
      minZoom={1}
      scrollWheelZoom={true}
      zoom={10}
      zoomControl={true}
    >
      <ForwardRef(Leaflet(TileLayer))
        attribution="Map &copy; 1987-2020 <a href='https://developer.here.com'>HERE</a>"
        url="https://2.base.maps.cit.api.here.com/maptile/2.1/maptile/newest/normal.day/{z}/{x}/{y}/256/png8"
      />
    </Map>
  </div>
</div>
`;

exports[`Leaflet maps renders a map with MapBox maps as provider 1`] = `
<div
  className="widget-maps"
  style={
    Object {
      "height": "75px",
      "width": "50%",
    }
  }
>
  <div
    className="widget-leaflet-maps-wrapper"
  >
    <Map
      attributionControl={false}
      center={
        Object {
          "lat": 51.906688,
          "lng": 4.48837,
        }
      }
      className="widget-leaflet-maps"
      dragging={true}
      maxZoom={18}
      minZoom={1}
      scrollWheelZoom={true}
      zoom={10}
      zoomControl={true}
    >
      <ForwardRef(Leaflet(TileLayer))
        attribution="Map data &copy; <a href='https://www.openstreetmap.org/'>OpenStreetMap</a> contributors, <a href='https://creativecommons.org/licenses/by-sa/2.0/'>CC-BY-SA</a>, Imagery © <a href='https://www.mapbox.com/'>Mapbox</a>"
        id="mapbox/streets-v11"
        tileSize={512}
        url="https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}"
        zoomOffset={-1}
      />
    </Map>
  </div>
</div>
`;

exports[`Leaflet maps renders a map with attribution 1`] = `
<div
  className="widget-maps"
  style={
    Object {
      "height": "75px",
      "width": "50%",
    }
  }
>
  <div
    className="widget-leaflet-maps-wrapper"
  >
    <Map
      attributionControl={true}
      center={
        Object {
          "lat": 51.906688,
          "lng": 4.48837,
        }
      }
      className="widget-leaflet-maps"
      dragging={true}
      maxZoom={18}
      minZoom={1}
      scrollWheelZoom={true}
      zoom={10}
      zoomControl={true}
    >
      <ForwardRef(Leaflet(TileLayer))
        attribution="&copy; <a href='https://osm.org/copyright'>OpenStreetMap</a> contributors"
        url="https://{s}.tile.osm.org/{z}/{x}/{y}.png"
      />
    </Map>
  </div>
</div>
`;

exports[`Leaflet maps renders a map with current location 1`] = `
<div
  className="widget-maps"
  style={
    Object {
      "height": "75px",
      "width": "50%",
    }
  }
>
  <div
    className="widget-leaflet-maps-wrapper"
  >
    <Map
      attributionControl={false}
      center={
        Object {
          "lat": 51.906688,
          "lng": 4.48837,
        }
      }
      className="widget-leaflet-maps"
      dragging={true}
      maxZoom={18}
      minZoom={1}
      scrollWheelZoom={true}
      zoom={10}
      zoomControl={true}
    >
      <ForwardRef(Leaflet(TileLayer))
        attribution="&copy; <a href='https://osm.org/copyright'>OpenStreetMap</a> contributors"
        url="https://{s}.tile.osm.org/{z}/{x}/{y}.png"
      />
      <ForwardRef(Leaflet(Marker))
        icon={
          NewClass {
            "_initHooksCalled": true,
            "options": Object {
              "className": "custom-leaflet-map-icon-marker",
              "html": "<img src=\\"image:url\\" class=\\"custom-leaflet-map-icon-marker-icon\\"}></img>",
            },
          }
        }
        interactive={false}
        key="marker_0"
        position={
          Object {
            "lat": 51.906688,
            "lng": 4.48837,
          }
        }
      />
    </Map>
  </div>
</div>
`;

exports[`Leaflet maps renders a map with markers 1`] = `
<div
  className="widget-maps"
  style={
    Object {
      "height": "75px",
      "width": "50%",
    }
  }
>
  <div
    className="widget-leaflet-maps-wrapper"
  >
    <Map
      attributionControl={false}
      center={
        Object {
          "lat": 51.906688,
          "lng": 4.48837,
        }
      }
      className="widget-leaflet-maps"
      dragging={true}
      maxZoom={18}
      minZoom={1}
      scrollWheelZoom={true}
      zoom={10}
      zoomControl={true}
    >
      <ForwardRef(Leaflet(TileLayer))
        attribution="&copy; <a href='https://osm.org/copyright'>OpenStreetMap</a> contributors"
        url="https://{s}.tile.osm.org/{z}/{x}/{y}.png"
      />
      <ForwardRef(Leaflet(Marker))
        icon={
          NewClass {
            "_initHooksCalled": true,
            "options": Object {
              "className": "custom-leaflet-map-icon-marker",
              "html": "<img src=\\"image:url\\" class=\\"custom-leaflet-map-icon-marker-icon\\"}></img>",
            },
          }
        }
        interactive={true}
        key="marker_0"
        position={
          Object {
            "lat": 51.906688,
            "lng": 4.48837,
          }
        }
        title="Mendix HQ"
      >
        <ForwardRef(Leaflet(Popup))>
          <span
            style={
              Object {
                "cursor": "none",
              }
            }
          >
            Mendix HQ
          </span>
        </ForwardRef(Leaflet(Popup))>
      </ForwardRef(Leaflet(Marker))>
      <ForwardRef(Leaflet(Marker))
        icon={
          NewClass {
            "_initHooksCalled": true,
            "options": Object {
              "className": "custom-leaflet-map-icon-marker",
              "html": "<img src=\\"image:url\\" class=\\"custom-leaflet-map-icon-marker-icon\\"}></img>",
            },
          }
        }
        interactive={true}
        key="marker_1"
        position={
          Object {
            "lat": 51.922823,
            "lng": 4.479632,
          }
        }
        title="Gementee Rotterdam"
      >
        <ForwardRef(Leaflet(Popup))>
          <span
            style={
              Object {
                "cursor": "none",
              }
            }
          >
            Gementee Rotterdam
          </span>
        </ForwardRef(Leaflet(Popup))>
      </ForwardRef(Leaflet(Marker))>
    </Map>
  </div>
</div>
`;

exports[`Leaflet maps renders a map with percentage of parent units renders the structure correctly 1`] = `
<div
  className="widget-maps"
  style={
    Object {
      "height": "75%",
      "width": "50%",
    }
  }
>
  <div
    className="widget-leaflet-maps-wrapper"
  >
    <Map
      attributionControl={false}
      center={
        Object {
          "lat": 51.906688,
          "lng": 4.48837,
        }
      }
      className="widget-leaflet-maps"
      dragging={true}
      maxZoom={18}
      minZoom={1}
      scrollWheelZoom={true}
      zoom={10}
      zoomControl={true}
    >
      <ForwardRef(Leaflet(TileLayer))
        attribution="&copy; <a href='https://osm.org/copyright'>OpenStreetMap</a> contributors"
        url="https://{s}.tile.osm.org/{z}/{x}/{y}.png"
      />
    </Map>
  </div>
</div>
`;

exports[`Leaflet maps renders a map with percentage of width and height units renders the structure correctly 1`] = `
<div
  className="widget-maps"
  style={
    Object {
      "height": "auto",
      "paddingBottom": "37.5%",
      "width": "50%",
    }
  }
>
  <div
    className="widget-leaflet-maps-wrapper"
  >
    <Map
      attributionControl={false}
      center={
        Object {
          "lat": 51.906688,
          "lng": 4.48837,
        }
      }
      className="widget-leaflet-maps"
      dragging={true}
      maxZoom={18}
      minZoom={1}
      scrollWheelZoom={true}
      zoom={10}
      zoomControl={true}
    >
      <ForwardRef(Leaflet(TileLayer))
        attribution="&copy; <a href='https://osm.org/copyright'>OpenStreetMap</a> contributors"
        url="https://{s}.tile.osm.org/{z}/{x}/{y}.png"
      />
    </Map>
  </div>
</div>
`;

exports[`Leaflet maps renders a map with pixels renders structure correctly 1`] = `
<div
  className="widget-maps"
  style={
    Object {
      "height": "75px",
      "width": "50px",
    }
  }
>
  <div
    className="widget-leaflet-maps-wrapper"
  >
    <Map
      attributionControl={false}
      center={
        Object {
          "lat": 51.906688,
          "lng": 4.48837,
        }
      }
      className="widget-leaflet-maps"
      dragging={true}
      maxZoom={18}
      minZoom={1}
      scrollWheelZoom={true}
      zoom={10}
      zoomControl={true}
    >
      <ForwardRef(Leaflet(TileLayer))
        attribution="&copy; <a href='https://osm.org/copyright'>OpenStreetMap</a> contributors"
        url="https://{s}.tile.osm.org/{z}/{x}/{y}.png"
      />
    </Map>
  </div>
</div>
`;

exports[`Leaflet maps renders a map with right structure 1`] = `
<div
  className="widget-maps"
  style={
    Object {
      "height": "37.5px",
      "width": "50px",
    }
  }
>
  <div
    className="widget-leaflet-maps-wrapper"
  >
    <Map
      attributionControl={false}
      center={
        Object {
          "lat": 51.906688,
          "lng": 4.48837,
        }
      }
      className="widget-leaflet-maps"
      dragging={true}
      maxZoom={18}
      minZoom={1}
      scrollWheelZoom={true}
      zoom={10}
      zoomControl={true}
    >
      <ForwardRef(Leaflet(TileLayer))
        attribution="&copy; <a href='https://osm.org/copyright'>OpenStreetMap</a> contributors"
        url="https://{s}.tile.osm.org/{z}/{x}/{y}.png"
      />
    </Map>
  </div>
</div>
`;
